<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	android:orientation="vertical"
   	>
   	<TextView 
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:text="Contents Upload"
   	    />
   	<TableLayout 
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="5dp"
   		android:stretchColumns="1"
   		>
   		<!-- P_ID -->
   		<TableRow 
   			android:layout_marginTop="10dp"
   			android:layout_width="fill_parent"
   			android:layout_height="wrap_content"
   			>
   			<TextView 
	   			android:text="@string/product_label"
	   			android:textSize="@dimen/view_author"
	   		/>
	   		<EditText 
	   			android:id="@+id/product_edit"
	   			android:singleLine="true"
	   			android:maxLength="11"
	   			android:hint="pwwwwxxyyzz"
	   			android:layout_marginLeft="10dp"
	   		/>
   		</TableRow>
   		<!-- file name -->
   		<TableRow 
   			android:layout_marginTop="5dp"
   			android:layout_width="fill_parent"
   			android:layout_height="wrap_content"
   			>
   			<TextView 
	   			android:text="@string/file_label"
	   			android:textSize="@dimen/view_author"
	   		/>
	   		<EditText 
	   			android:id="@+id/file_edit"
	   			android:maxLines="2"
	   			android:maxWidth="220dp"
	   			android:maxLength="48"
	   			android:layout_marginLeft="10dp"
	   		/>
   		</TableRow>
   	</TableLayout>
   	<TextView 
   		android:id="@+id/post_result"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:hint="@string/result_hint"
   		android:layout_marginTop="10dp"
   		android:gravity="center"
   	/>
   	<LinearLayout 
   		android:orientation="horizontal"
   		android:layout_width="fill_parent"
   		android:layout_height="wrap_content"
   		android:layout_marginTop="10dp"
   		>
   		<Button 
   			android:layout_width="wrap_content"
   			android:layout_weight="1"
   			android:layout_height="wrap_content"
   			android:text="@string/post_button"
   			android:onClick="createPostButtonClick"
   		/>
   		<Button 
   			android:layout_width="wrap_content"
   			android:layout_weight="1"
   			android:layout_height="wrap_content"
   			android:text="@string/exit_button"
   			android:onClick="exitButtonClick"
   		/>
   	</LinearLayout>
   	<TextView 
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="30dp"
   	    android:text="Content Download"
   	    />
   	<Button 
   	    android:layout_width="match_parent"
   	    android:layout_height="wrap_content"
   	    android:layout_marginTop="10dp"
   	    android:text="Download Button"
   	    android:onClick="contentDownloadExecution"
   	    />
</LinearLayout>