<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/music_background"
    >
    <LinearLayout 
        android:id="@+id/progress_layout"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        >
        <ProgressBar
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:layout_gravity="center_vertical"
	    />
        <TextView 
            android:id="@+id/status_guide"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="이용약관에 동의하시면, 서비스를 이용할 수 있습니다.\n데이터 초기화 중 입니다\n처음 설치 시, 2분 정도 소요 됩니다."
            android:layout_marginLeft="20dp"
        />
    </LinearLayout>
    <ScrollView
    	android:id="@+id/initial_display"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
	    android:padding="5dp"
	    android:background="@drawable/main_background0"
	    android:visibility="gone"
	    android:layout_marginTop="10dp"
    	>
    	<RelativeLayout
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	>
	    	<TextView
	    		android:id="@+id/ua_label"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:text="@string/user_agreement_label"
	    		android:textSize="@dimen/view_content"
		    	android:textColor="@color/context_foreground"
	    	/>
	    	<TextView
	    		android:id="@+id/usage_guide"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_below="@id/ua_label"
	    		android:layout_marginTop="10dp"
	    		android:text="@string/usage_guide"
	    		android:textSize="@dimen/view_content"
		    	android:textColor="@color/context_foreground"
	    	/>
	    	<Button
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_marginTop="10dp"
	    		android:layout_below="@id/usage_guide"
	    		android:layout_alignParentLeft="true"
	    		android:text="@string/user_agreement_ok"
	    		android:onClick="userAgreementConfirmed"
	    	/>
	    	<Button
	    		android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	    		android:layout_marginTop="10dp"
	    		android:layout_below="@id/usage_guide"
	    		android:layout_alignParentRight="true"
	    		android:text="@string/user_agreement_nok"
	    		android:onClick="userAgreementNotConfirmed"
	    	/>
	    </RelativeLayout>
    </ScrollView>
</LinearLayout>