<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/setup_background"
    android:paddingTop="5dp"
    >
    <RelativeLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>
    	<TextView
		   	android:id="@+id/content_title_id"
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
		   	android:layout_alignParentLeft="true"
		   	android:text="@string/content_mgmt_title"
		   	android:textSize="@dimen/view_title"
		   	android:textColor="@color/title_foreground"
		/>
    	<!-- 
		<TextView 
			android:id="@+id/remain_music_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/content_title_id"
			android:layout_centerVertical="true"
			android:layout_marginLeft="25dp"
			android:textSize="@dimen/view_author_large"
		   	android:textColor="@color/title_foreground"
		/>
		 -->
		<TextView
			android:id="@+id/count_content"
		   	android:layout_width="wrap_content" 
		   	android:layout_height="wrap_content"
		   	android:layout_alignParentRight="true"
		   	android:textSize="@dimen/view_author_large"
		   	android:textColor="@color/title_foreground"
		/>
    </RelativeLayout>
    <LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<Spinner 
			android:id="@+id/main_spin"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:prompt="@string/prompt_main_spin"
			android:textSize="@dimen/sub_title"
		/>
		<Spinner 
			android:id="@+id/sub_spin"
			android:layout_width="wrap_content"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:prompt="@string/prompt_sub_spin"
			android:textSize="@dimen/sub_title"
		/>
	</LinearLayout>
	<ProgressBar android:id="@+id/progress_large"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
    />
    <ListView
    	android:id="@+id/control_music_list"
    	android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:cacheColorHint="#00000000"
    	android:layout_alignParentTop="true"
    	android:layout_marginTop="5dp"
    />
</LinearLayout>