<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  	android:id="@+id/main_layout"
   	android:orientation="vertical"
   	android:layout_width="fill_parent"
   	android:layout_height="fill_parent"
   	>
   	<RelativeLayout
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5dp"
    	>
    	<ImageButton android:id="@+id/shuffle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:background="@drawable/ic_mp_shuffle_off_btn"
            android:layout_marginLeft="10dp"
        />
    	<LinearLayout
    	    android:orientation="horizontal"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_centerHorizontal="true"
    	    >
    	    <TextView
	    		android:id="@+id/title_label"
	    		android:layout_width="wrap_content" 
	    		android:layout_height="wrap_content"
	    		android:text="@string/main_screen_title"
	    		android:textSize="@dimen/main_title"
	    		android:textColor="@color/title_foreground"
	    		android:background="@drawable/title"
	    		android:layout_marginRight="5dp"
	    	/>
    	</LinearLayout>
		<ImageButton android:id="@+id/repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_mp_repeat_off_btn"
            android:layout_marginRight="10dp"
        />
    </RelativeLayout>
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>
    	<ImageButton
    		android:layout_width="wrap_content"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:src="@drawable/menu_preference"
    		android:onClick="downloadMusicOperation"    					
    	/>
    	<ImageButton
    		android:layout_width="wrap_content"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:src="@drawable/menu_coupon"
    		android:onClick="purchaseCoupon"					
    	/>
    	<ImageButton
    		android:layout_width="wrap_content"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:src="@drawable/menu_help"
    		android:onClick="showHelpInformation"    					
    	/>
    	<ImageButton
    		android:layout_width="wrap_content"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:src="@drawable/menu_exit"
    		android:onClick="exitApplication"    					
    	/>
    </LinearLayout>
    <ProgressBar android:id="@+id/progress_large"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
    />
   	<LinearLayout
    	android:id="@+id/song_description"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:padding="5dp"
    	android:visibility="gone"
    	>
    	<TextView
	    	android:id="@+id/music_title"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/view_author"
	    	android:textColor="@color/context_foreground"
	    />
	    <TextView
	    	android:id="@+id/music_author"
	    	android:layout_width="fill_parent"
	    	android:layout_height="wrap_content"
	    	android:textSize="@dimen/view_author"
	    	android:textColor="@color/context_foreground"
	    	android:layout_marginTop="5dp"
	    />
    </LinearLayout>
    <ListView
    	android:id="@+id/music_list"
    	android:layout_width="fill_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1"
    	android:cacheColorHint="#00000000"
    	android:layout_alignParentTop="true"
    	android:padding="5dp"
    />
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5dp"
    	>
    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/min_volume_label"
    		android:textSize="@dimen/view_content"
    		android:textColor="@color/context_foreground"
    		android:layout_gravity="center_vertical"
    	/>
    	<SeekBar
    		android:id="@+id/volume"
    		android:layout_width="0dp"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp"
    	/>
    	<TextView
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/max_volume_label"
    		android:textColor="@color/context_foreground"
    		android:textSize="@dimen/view_content"
    		android:layout_gravity="center_vertical"
    	/>
    </LinearLayout>
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	>
    	<TextView
    		android:id="@+id/prog_time"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="00:00"
    		android:textSize="@dimen/view_content"
    		android:textColor="@color/context_foreground"
    	/>
    	<ProgressBar
    		android:id="@+id/progress"
    		style="?android:attr/progressBarStyleHorizontal"
    		android:layout_width="0dp"
    		android:layout_weight="1"
    		android:layout_height="15dp"
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp"
    		android:layout_gravity="center_vertical"
    	/>
    	<TextView
    		android:id="@+id/total_time"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="00:00"
    		android:textColor="@color/context_foreground"
    		android:textSize="@dimen/view_content"
    	/>
    </LinearLayout>
    <LinearLayout
    	android:id="@+id/main_btn_layout"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="5dp"
    	>
    	<ImageButton
    		android:id="@+id/previous_btn_id"
    		android:layout_width="wrap_content"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:src="@drawable/media_previous"
    		android:onClick="previousMusicClick"
    	/>
    	<ImageButton
    		android:id="@+id/music_play_button"
    		android:layout_width="wrap_content"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:src="@drawable/media_play"
    		android:onClick="playMusicClick"    					
    	/>
    	<ImageButton
    		android:id="@+id/stop_btn_id"
    		android:layout_width="wrap_content"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:src="@drawable/media_stop"
    		android:onClick="stopMusicClick"    					
    	/>
    	<ImageButton
    		android:id="@+id/next_btn_id"
    		android:layout_width="wrap_content"
    		android:layout_weight="1"
    		android:layout_height="wrap_content"
    		android:src="@drawable/media_next"
    		android:onClick="nextMusicClick"    					
    	/>
    </LinearLayout>
</LinearLayout>